# mancala

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
include/: mancala.h  strategy.h
mk/: common.mk
src/: CMakeLists.txt  chaotic.c  main.c  mancala.c  mancala.h  maximal_first.c  minimal_first.c  strategies.inc  strategy.c  strategy.h
src/mancala/: CMakeLists.txt  mancala.c
src/strategy/: CMakeLists.txt  chaotic.c  maximal_first.c  minimal_first.c
tests/: CMakeLists.txt  test.c
